[package]
name = "sym-lang"
version = "1.0.0"
authors = ["Q0tzly"]
edition = "2021"
keywords = ["language", "interpreter", "command"]

license-file = "LICENSE"
readme = "README.md"

repository = "https://github.com/Q0tzly/sym"
documentation = "https://q0tzly.github.io/sym/en/book/index.html"

[dependencies]

[[bin]]
name = "sym"
path = "src/main.rs"
