[package]
name = "sym-lang"
version = "1.0.0"
authors = ["Q0tzly"]
edition = "2021"
keywords = ["language", "interpreter", "command"]

description = "Sym Lang is a lightweight stack-based programming language that uses symbols and numbers."

license = "MIT"
license-file = "LICENSE"
readme = "README.md"

repository = "https://github.com/Q0tzly/sym"
documentation = "https://q0tzly.github.io/sym/en/book/index.html"

[dependencies]

[[bin]]
name = "sym"
path = "src/main.rs"
